# AI-Council

./: .gitignore  README.md  alembic.ini  pyproject.toml
.github/workflows/: ci.yml
eps/: __init__.py  config.py  main.py
eps/adapters/: __init__.py  base.py  fake.py  local_cli.py
eps/api/: __init__.py  routes.py  schemas.py
eps/cli/: __init__.py  client.py  main.py  progress.py
eps/core/: __init__.py  bus.py  domain.py  engine.py  events.py  focus.py  jobs.py
eps/data/: __init__.py  models.py  repository.py  seed.py
migrations/: env.py
migrations/versions/: 0001_baseline.py  0002_schema.py  0003_usage_stats.py  0004_idempotency_key.py
tasks/: todo.md
tests/: test_adapters.py  test_api.py  test_ci_workflow.py  test_cli.py  test_cli_progress.py  test_cli_run_follow.py  test_cli_watch.py  test_core_bus.py  test_core_domain_events.py  test_core_engine.py  test_core_focus.py  test_core_jobs.py  test_data_models.py  test_dependencies.py  test_integration_full_session.py  test_local_cli_adapter.py  test_local_cli_retry.py  test_local_cli_validate_source.py  test_main_app.py  test_migrations.py  test_package_skeleton.py  test_repository.py  test_schemas.py  test_seed.py  test_source_status.py  test_story_5_6_web_ws_e2e.py  test_story_6_3_cli_e2e.py  test_ws_events.py
