[project]
name = "eps"
version = "0.1.0"
description = "AI-Council backend (eps)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "sqlmodel>=0.0.22",
    "alembic>=1.13",
    "pydantic>=2.7",
    "typer>=0.12",
    "rich>=13.7",
    "httpx>=0.27",
    "websockets>=12.0",
]

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["eps"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
